Migrate more InstanceIdentifier users
Switch to using DataObjectIdentifier instead, completing the migration
for bulk-o-matic.

Change-Id: Ie599b1d4358cac5e3d89420c2be39a5e2dad26d4
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>